--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,1 +1,118 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+a {
+    text-decoration: none;
+}
 
+#main {
+    max-width: 800px;
+    margin: 0 auto;
+    /* margin-bottom: 5rem; */
+    padding: 10px;
+}
+nav {
+    position: sticky;
+    top: 0px;
+    background-color: white;
+    padding: 20px 0 5px;
+    margin-bottom: 80px;
+}
+nav > ul {
+    list-style: none;
+    background-color: #292c2b;
+    padding: 20px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+nav > ul a {
+    background: white;
+    color: #292c2b;
+    padding: 5px 10px;
+    border-radius: 5px;
+}
+.products {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 300px;
+    gap: 40px;
+}
+.product-item {
+     display: flex;
+     flex-direction: column;
+     border: 1px solid #ccc;
+     padding: 10px;
+     gap: 10px;
+     height: 100%;
+     border-radius: 10px;
+}
+.product-item > div {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+    height: 100%;
+}
+
+.product-item  .product-image {
+    border-right: 1px solid #ccc;
+}
+.product-item  .product-image > img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+.product-item  .product-info p {
+    margin: 10px 0;
+}
+ button {
+   margin-left: auto;
+   margin-top: auto;
+   background: #708f5c;
+   border:none;
+   outline: none;
+   padding: 8px 20px;
+   border-radius: 5px;
+   cursor: pointer;
+   color: white;
+}
+
+.form-control {
+    position: fixed;
+    width: min(350px , 100%);
+    top: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 20px;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+}
+
+.form-control > div {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+.form-control :is(input, textarea) {
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.form-control .buttons  {
+    display: flex;
+    flex-direction: row;
+    gap:0;
+}
+
+@media screen and (max-width: 570px) {
+    .products {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
